--- a/2017-S1/D3/barDemo.html
+++ b/2017-S1/D3/barDemo.html
@@ -9,11 +9,8 @@
 
 <body>
     <script type="text/javascript" src="./d3.js"></script>
-    <svg class="circle" width="720" height="120"></svg>
-    <p>Kaley is drawing</p>
-    <svg class="bar" width="720" height="120"></svg>
-
-    <script type="text/javascript" src="./index.js"></script>
+    <svg class="rectangle"></svg>
+    <script type="text/javascript" src="./barDemo.js"></script>
 </body>
 
 </html>
