--- a/JavaScript/w3schools-jQuery/src/3_HTML.html
+++ b/JavaScript/w3schools-jQuery/src/3_HTML.html
@@ -66,6 +66,42 @@
     <button id="btn16">Empty div elements</button>
     <button id="btn17">Remove \<p\> elements with id = "p1"</button>
     <button id="btn18">Remove \<p\> elements with id = "p1" and "p2"</button>
+    <br><br>
+
+    <div id="txt10">
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <p id="p3">This is a paragraph.</p>
+        <p id="p4">This is another paragraph.</p>
+    </div>
+    <div id="txt11">This is some important text!</div>
+    <br><br>
+    <button id="btn19">Add classes to elements</button>
+    <button id="btn20">Remove classes from elements</button>
+    <button id="btn21">Toggle classes </button>
+    <br><br>
+
+    <div id="txt12">
+        <p id="p5">This is a paragraph.</p>
+        <p id="p6">This is a paragraph.</p>
+        <p id="p7">This is a paragraph.</p>
+        <p id="p8">This is a paragraph.</p>
+    </div>
+    <br>
+    <button id="btn22">Return background-color of p</button>
+    <button id="btn23">Set background-color of p</button>
+    <br><br>
+
+    <div id="txt13"></div>
+    <br>
+    <button id="btn24">Display dimensions of div</button>
+    <br><br>
+
+    <button id="btn25">Display dimensions of document and window</button>
+    <br><br>
+
+    <div id="txt_last"></div>
+    <button id="btn26">resize</button>
 
     <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
     <script src="3_HTML.js "></script>
